@@ -1,3 +1,9 @@
+2003-01-07  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* fix build warnings
+	* url.c (parseURL2): fix comparison between pointer and integer
+	* news.c (readNewsgroup): variable `scheme',`group',`list' might be clobbered by `longjmp' or `vfork'
+
 2003-01-07  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 03610] Re: news:<newsgroup>
@@ -6178,4 +6184,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.656 2003/01/06 15:36:56 ukai Exp $
+$Id: ChangeLog,v 1.657 2003/01/06 15:49:28 ukai Exp $
